# track

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SPEC.md  build.rs  install.sh
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: borrows.md  constants.md  enums.md  imports.md  lsp.md  macros.md  patterns.md  ring.md  stdlib.md  yard.md
editor/nvim/: README.md  track.lua  track.vim
editor/vscode/: package.json
editor/vscode/syntaxes/: track.tmLanguage.json
examples/: arithmetic.trk  borrow.trk  borrow_lock_err.trk  escape_err.trk  hello.trk  linear_auto_free.trk  macro_test.trk  manual_free_err.trk  union_enum_test.trk  use_test.trk
grammars/: README.md  track.tmLanguage.json
new-yarp/: .gitignore  Track.toml
new-yarp/src/: main.trk
scripts/: install.sh
src/: lib.rs  lsp_bin.rs  main.rs
src/ast/: mod.rs
src/checker/: mod.rs
src/codegen/: mod.rs
src/lexer/: mod.rs
src/lsp/: mod.rs
src/parser/: expr.rs  mod.rs  stmt.rs
src/yard/: commands.rs  manifest.rs  mod.rs  resolver.rs
tests/: checker_tests.rs  cli_tests.rs  codegen_tests.rs  editor_tests.rs  integration_tests.rs  lexer_tests.rs  lsp_tests.rs  parser_tests.rs  performance_tests.rs  regression_tests.rs  soundness_tests.rs  yard_tests.rs
