[package]
name = "track"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "track"
path = "src/main.rs"

[[bin]]
name = "track-lsp"
path = "src/lsp_bin.rs"

[dependencies]
logos = "0.14"
inkwell = { version = "0.9.0", features = ["llvm22-1"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower-lsp = { version = "0.20", features = ["proposed"] }
serde_json = "1"
regex = "1"
